@@ -8,6 +8,8 @@
 
 	* pygtk-gtkicontheme.xml Add.
 
+	* pygtk-gtkiconinfo.xml Add.
+
 2004-04-13  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkexpander.xml Add.
